# Project_1

./: Home.py  pyproject.toml
Backup/: Visao_Empresa.py  Visao_Entregadores.py  Visao_Restaurantes.py
pages/: 1_Visao_Empresa.py  2_Visao_Entregadores.py  3_Visao_Restaurantes.py
