[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "haversine>=2.9.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "pillow>=10.0.0",
    "plotly>=5.0.0",
    "plotly-express>=0.4.1",
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
]
